--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -11,7 +11,7 @@ body {
     width: 30em;
     height: fit-content;
     margin: 0 auto;
-    margin-top: 10svh;
+    margin-top: 10em;
 }
 
 .container__title, .form__label {
