--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,10 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-size: 16px;
     font-family: Helvetica, Arial, sans-serif;
-}
-
-body {
-    margin: 0;
 }
 
 .container {
@@ -20,36 +22,6 @@ body {
     font-weight: bold;
 }
 
-.container__empty-todo-list {
-    position: relative;
-    border: dashed 0.2em #848484;
-    border-radius: 10px;
-    height: 18em;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.container__empty-todo-list__title {
-    font-size: 1.1em;
-    font-weight: 800;
-}
-
-.container__empty-todo-list__body {
-    color: #777777;
-    font-size: 1.2em;
-    margin-top: 15px;
-}
-
-.container__todo-list__title-div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
-
 .container__form__div {
     display: flex;
     justify-content: end;
@@ -57,7 +29,11 @@ body {
 
 }
 
-.container__button, .form__button__delete, .form__button__add, .container__todo-list__title-div__addtodo--button, .form__container__div__button {
+.empty-list__button, 
+.form__button__delete, 
+.form__button__add, 
+.container__todo-list__div__addtodo, 
+.form__container__div__button {
     background-color: #2e43ff;
     color: #ffffff;
     font-size: 1.3em;
@@ -82,16 +58,18 @@ body {
     margin-left: 2em;
 }
 
-.container__todo-list__title-div__addtodo--button {
-    float: right;
-}
-
-.container__button:hover, .form__button__add:hover, .container__todo-list__title-div__addtodo--button:hover, .form__container__div__button:last-child:hover {
+.empty-list__button:hover, 
+.form__button__add:hover, 
+.container__todo-list__div__addtodo:hover, 
+.form__container__div__button:last-child:hover {
   background-color: #2237f3;
   color: #ffffff;
 }
 
-.container__button:active, .form__button__add:active, .container__todo-list__title-div__addtodo--button:active, .form__container__div__button:last-child:active {
+.empty-list__button:active, 
+.form__button__add:active, 
+.container__todo-list__div__addtodo:active, 
+.form__container__div__button:last-child:active {
     background-color: #6776ff;
 }
 
@@ -109,14 +87,6 @@ body {
 .form__container__div__button:first-child:active {
     color: #99a1ee;
     border: 2px solid #e9e9e9;
-}
-
-.container__button span {
-    font-size:1.8em;
-    font-weight: 100;
-    position: relative;
-    bottom: 3px;
-    margin-right: 0.2em;
 }
 
 .form {
@@ -139,7 +109,13 @@ body {
     border: solid 2px #d2d2d2;
 }
 
-.form__button__delete, .form__button__add  {
+.form__dropdown {
+    border: solid 2px #505050;
+    color: #444444;
+}
+
+.form__button__delete, 
+.form__button__add  {
     display: block;
     float: right;
     background-color: #ff2e2e;
@@ -165,15 +141,6 @@ body {
     background-repeat: no-repeat;
     background-position: right 1em top 50%;
     background-size: 1.1em auto;
-}
-
-.form__select__icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: red;
-    scale: 1.25;
 }
 
 .form__break {
