--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -48,6 +48,7 @@ html {
     border-radius: .3em;
     cursor: pointer;
     transition-duration: 0.2s;
+    text-decoration: none;
 }
 
 .form__container__div__button {
