--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -16,23 +16,25 @@ html {
     margin-top: 10rem;
 }
 
-.container__title, .form__label {
+.container__title, .form__label, .label {
     margin-bottom: 45px;
     font-size: 2rem;
     font-weight: bold;
 }
 
-.container__form__div {
+.form__container__form__div {
     display: flex;
     justify-content: end;
     flex-basis: 0;
 }
 
 .empty-list__button, 
-.form__button__delete, 
-.form__button__add, 
+.form__button--delete,
+.form__container__form__div__button--delete,
+.subtasklist__subtask__delete, 
+.form__button--add, 
 .container__todo-list__div__addtodo, 
-.form__container__div__button {
+.form__container__div--button {
     display: inline-flex;
     align-items: center;
     background-color: #2e43ff;
@@ -49,39 +51,39 @@ html {
     text-decoration: none;
 }
 
-.form__container__div__button {
+.form__container__div--button {
     width: 6.5rem;
     display: flex;
     justify-content: center;
 }
 
 .empty-list__button:hover, 
-.form__button__add:hover, 
+.form__button--add:hover, 
 .container__todo-list__div__addtodo:hover, 
-.form__container__div__button:last-child:hover {
+.form__container__div--button:last-child:hover {
   background-color: #2237f3;
   color: #ffffff;
 }
 
 .empty-list__button:active, 
-.form__button__add:active, 
+.form__button--add:active, 
 .container__todo-list__div__addtodo:active, 
-.form__container__div__button:last-child:active {
+.form__container__div--button:last-child:active {
     background-color: #6776ff;
 }
 
-.form__container__div__button:first-child {
+.form__container__div--button:first-child {
     background-color: initial;
     color: #2e43ff;
     border: 2px solid #cacaca;
 }
 
-.form__container__div__button:first-child:hover {
+.form__container__div--button:first-child:hover {
     color: #0014cc;
     border: 2px solid #a5a5a5;
 }
   
-.form__container__div__button:first-child:active {
+.form__container__div--button:first-child:active {
     color: #99a1ee;
     border: 2px solid #e9e9e9;
 }
@@ -90,12 +92,12 @@ html {
     height: fit-content;
 }
 
-.form__label {
+.form__label, .label {
     display: block;
     margin-bottom: 0.5em;
 }
 
-.form__input, .form__dropdown {
+.form__input, .form__dropdown, .subtasklist__subtask__input {
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 2.5rem;
@@ -111,24 +113,26 @@ html {
     color: #444444;
 }
 
-.form__button__delete, 
-.form__button__add  {
+.form__button--delete,
+.form__container__form__div__button--delete,
+.subtasklist__subtask__delete, 
+.form__button--add  {
     display: block;
     float: right;
     background-color: #ff2e2e;
     margin-bottom: 3rem;
 }
 
-.form__button__add {
+.form__button--add {
     background-color: #2e43ff;
 }
 
-.form__button__delete:hover {
+.form__button--delete:hover, .subtasklist__subtask__delete:hover, .form__container__form__div__button--delete:hover {
     background-color: #ff1515;
     color: #ffffff;
 }
   
-.form__button__delete:active {
+.form__button--delete:active, .subtasklist__subtask__delete:active, .form__container__form__div__button--delete:active {
     background-color: #f56161;
 }
 
