--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    /* WIP */
+}
+
 html {
     font-size: 16px;
     font-family: Helvetica, Arial, sans-serif;
