--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -43,7 +43,7 @@ html {
     font-weight: bold;
 }
 
-.form__container__form__div {
+.form__container {
     display: flex;
     justify-content: end;
     flex-basis: 0;
@@ -51,11 +51,11 @@ html {
 
 .empty-list__button, 
 .form__button--delete,
-.form__container__form__div__button--delete,
+.form__container__button--delete,
 .subtasklist__subtask__delete, 
 .form__button--add, 
 .container__todo-list__div__addtodo, 
-.form__container__div--button {
+.form__container__button {
     display: inline-flex;
     align-items: center;
     background-color: var(--add-create-button);
@@ -72,7 +72,7 @@ html {
     text-decoration: none;
 }
 
-.form__container__div--button {
+.form__container__button {
     width: 6.5rem;
     display: flex;
     justify-content: center;
@@ -81,7 +81,7 @@ html {
 .empty-list__button:hover, 
 .form__button--add:hover, 
 .container__todo-list__div__addtodo:hover, 
-.form__container__div--button:last-child:hover {
+.form__container__button:last-child:hover {
   background-color: var(--add-create-button-hover);
   color: var(--button-font-color);
 }
@@ -89,22 +89,22 @@ html {
 .empty-list__button:active, 
 .form__button--add:active, 
 .container__todo-list__div__addtodo:active, 
-.form__container__div--button:last-child:active {
+.form__container__button:last-child:active {
     background-color: var(--add-create-button-active);
 }
 
-.form__container__div--button:first-child {
+.form__container__button:first-child {
     background-color: initial;
     color: var(--add-create-button);
     border: 2px solid #cacaca;
 }
 
-.form__container__div--button:first-child:hover {
+.form__container__button:first-child:hover {
     color: var(--cancel-button-font-color-hover);
     border: 2px solid #a5a5a5;
 }
   
-.form__container__div--button:first-child:active {
+.form__container__button:first-child:active {
     color: var(--cancel-button-font-color-active);
     border: 2px solid #e9e9e9;
 }
@@ -135,7 +135,7 @@ html {
 }
 
 .form__button--delete,
-.form__container__form__div__button--delete,
+.form__container__button--delete,
 .subtasklist__subtask__delete, 
 .form__button--add  {
     display: block;
@@ -148,12 +148,12 @@ html {
     background-color: var(--add-create-button);
 }
 
-.form__button--delete:hover, .subtasklist__subtask__delete:hover, .form__container__form__div__button--delete:hover {
+.form__button--delete:hover, .subtasklist__subtask__delete:hover, .form__container__button--delete:hover {
     background-color: var(--delete-button-hover);
     color: var(--button-font-color);
 }
   
-.form__button--delete:active, .subtasklist__subtask__delete:active, .form__container__form__div__button--delete:active {
+.form__button--delete:active, .subtasklist__subtask__delete:active, .form__container__button--delete:active {
     background-color: var(--delete-button-active);
 }
 
