This commit is a WIP on tracking user inputs

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -194,7 +194,8 @@ html {
 }
 
 .subtasklist {
-    height: 30rem;
+    min-height: 10rem;
+    max-height: 30rem;
     overflow: hidden;
     overflow-y: scroll;
     scrollbar-color: var(--scrollbar-colors);
